# lineup_info_crawler

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  backend.py  coding_guidelines.md  crawl_AllMusic.ipynb  lowlands_2024_batch3.csv  lowlands_2024_batch4.csv  lowlands_2025.csv  main.py  pinkpop_2025.csv  pinkpop_bands_2024.csv  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/adr/: 0001-crawl-params-shape-and-source.md
docs/agents/: ci.md  git.md  linting.md  python.md  testing.md
docs/research/: lowlands_program_groups.md
legacy/: lowlands_2024_batch2.csv
lineup_info_collector/: constants.py
lineup_info_collector/crawlers/: info_crawler.py  lineup_crawler.py  utils.py
lineup_info_collector/exporter/: exporter.py
params/: bks_2026.yaml  dtrh_2025.yaml  lowlands_2025.yaml  lowlands_2026.yaml  ooto_2025.yaml  pinkpop_2025.yaml  pinkpop_2026.yaml  prettypissed_2025.yaml
